--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -30,7 +30,7 @@
       <tbody>
         <% @project.objectives.each do |objective| %>
           <tr>
-            <td><%= objective.teaching_module %></td>
+            <td><%= objective.teaching_module.full_name %></td>
             <td><%= objective %></td>
           </tr>
         <% end %>
