--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -26,7 +26,7 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th>Module</th>
+          <th width="200">Module</th>
           <th>Objectif</th>
         </tr>
       </thead>
