--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,7 +14,7 @@
     <p>Nous pouvons intégrer des notes de ce projet dans les modules suivants</p>
     <%= render partial: 'teaching_modules/inline_list', locals: {teaching_modules: @project.teaching_modules} %>
     <h4>Personnes</h4>
-    <p><strong><%= link_to @project.user, @project.user unless @project.user.nil? %></strong></p>
+    <%= link_to @project.user do %><strong><%= @project.user %></strong><% end %><br>
     <ul class="list-unstyled">
       <% @project.users.each do |user| %>
         <li><%= link_to user, user %></li>
@@ -26,7 +26,7 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th width="200">Module</th>
+          <th width="300">Module</th>
           <th>Objectif</th>
         </tr>
       </thead>
