--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <div class="logo logo-black">
     <%= image_tag 'mmi-bordeaux.png' %>
-    <p>Admin</p>
+    <p>Teach</p>
   </div>
   <p class="version">
 	<strong>Version 1.6</strong><br/>
