--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -138,10 +138,11 @@ body.devise
       border-color: black
 
 footer
+  opacity: 0.9
   font-size: 10px
   text-align: center
   margin: 60px 0 0
   padding: 50px 0
-  background-color: #eee
+  background-color: #fff
   .logo
-    margin: 10px auto
+    margin: 10px auto !important
