--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -146,3 +146,9 @@ footer
   background-color: #fff
   .logo
     margin: 10px auto !important
+
+body.discuss
+  .logo
+    margin: 30px auto
+  #disqus_thread
+    margin-top: 120px
