--- a/app/views/discuss/index.html.erb
+++ b/app/views/discuss/index.html.erb
@@ -1,5 +1,7 @@
+<h1>Années scolaires</h1>
+<p>Cliquez sur une année scolaire pour accéder aux contenus pédagogiques</p>
 <ul>
-<% @years.each do |year| %>
-  <li><%= link_to year, discuss_year_path(year.year) %></li>
-<% end %>
+  <% @years.each do |year| %>
+    <li><h2><%= link_to year, discuss_year_path(year.year) %></h2></li>
+  <% end %>
 </ul>
