--- a/app/views/discuss/project.html.erb
+++ b/app/views/discuss/project.html.erb
@@ -1,1 +1,42 @@
-<h1><%= @project %></h1>
+<%= link_to @project.year, discuss_year_path(year: @project.year.year) %>
+<h1>
+  <%= @project %>
+  <sup><small>
+    <% @project.semesters.each do |semester| %>
+      <span class="label label-default"><%= semester %></span>      
+    <% end %>
+  </small></sup>
+</h1>
+<p>Semaine <%= @project.week_number %>, soit un démarrage le <%= @project.start_date.strftime '%d/%m/%y' %></p>
+<blockquote><%= simple_format @project.description %></blockquote>
+<div class="row">
+  <div class="col-md-4">
+    <%= simple_format @project.detailed_description %>
+    <h4>Personnes impliquées</h4>
+    <strong><%= @project.user %></strong><br>
+    <ul class="list-unstyled">
+      <% @project.users.each do |user| %>
+        <li><%= user %></li>
+      <% end %>
+    </ul>
+  </div>
+  <div class="col-md-8">
+    <h2>Objectifs visés par ce projet</h2>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th width="300">Module</th>
+          <th>Objectif</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @project.objectives.each do |objective| %>
+          <tr>
+            <td><%= objective.teaching_module.full_name %></td>
+            <td><%= objective %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
