--- a/app/views/discuss/index.html.erb
+++ b/app/views/discuss/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Années scolaires</h1>
+<% content_for :jumbotron do %>
+  <h1>Années scolaires</h1>
+<% end %>
 <p>Cliquez sur une année scolaire pour accéder aux contenus pédagogiques</p>
 <ul>
   <% @years.each do |year| %>
