--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -150,5 +150,8 @@ footer
 body.discuss
   .logo
     margin: 30px auto
+  h1
+    text-align: center
+    font-weight: 200
   #disqus_thread
     margin-top: 120px
