--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -8,6 +8,6 @@
     <%= link_to('Déconnexion', destroy_user_session_path, method: :delete, class: 'btn btn-default btn-xs') %>
   </p>
   <p class="version">
-    <strong>Version 1.6</strong> Horizon zero dawn
+    <strong>Version 1.7</strong> Shadow of the Colossus
   </p>
 </footer>
