--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -12,8 +12,10 @@
   </head>
   <body class="devise">
     <div class="logo logo-black">
-      <%= image_tag 'mmi-bordeaux.png' %>
-      <p>Teach</p>
+      <%= link_to root_path do %>
+        <%= image_tag 'mmi-bordeaux.png' %>
+        <p>Teach</p>
+      <% end %>
     </div>
     <div class="container">
       <div class="row">
