--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -40,8 +40,7 @@ Pour actualiser l'EDT, cliquez sur la promotion concernée.
 
 
 <h2>Maquette</h2>
-
-<table class="table">
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Promotion</th>
@@ -76,9 +75,9 @@ Pour actualiser l'EDT, cliquez sur la promotion concernée.
   </tbody>
 </table>
 
-<h2>EDT</h2>
 
-<table class="table">
+<h2>EDT</h2>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Module</th>
@@ -111,7 +110,6 @@ Pour actualiser l'EDT, cliquez sur la promotion concernée.
 
 
 <h2>Services</h2>
-
 <table class="table table-hover">
   <thead>
     <tr>
