plan by project

--- a/app/views/involvements/edit.html.erb
+++ b/app/views/involvements/edit.html.erb
@@ -1,4 +1,4 @@
 <%= render 'form' %>
 <br/>
-<%= link_to 'Supprimer cette planification', involvement_path(@involvement), method: :delete, data: {confirm: "Sûr(e)?"}, class: 'btn btn-danger'  %>
+<%= link_to 'Supprimer cette planification', involvement_path(@involvement), method: :delete, data: {confirm: "Sûr(e)?"}, class: 'btn btn-danger pull-right'  %>
 <br/>
