--- a/app/views/involvements/_form.html.erb
+++ b/app/views/involvements/_form.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-4">
         <%= f.input :teaching_module, label: 'Module' %>
-        <%= f.input :promotion, label: 'Promotion', include_blank: false %>
+        <%= f.input :promotion, label: 'Promotion', include_blank: false, collection: @promotions %>
         <%= f.input :user, label: 'Personne' %>
         <%= f.input :project, label: 'Projet' %>
         <%= f.input :description, input_html: { rows: 3 } %>
