--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,6 @@
 <%= link_to 'Modifier', edit_project_path(@project), class: 'btn btn-default' if can? :edit, @project %>
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-3">
     <h4>Description détaillée</h4>
     <%= simple_format @project.detailed_description %>
     <h4>Année</h4>
@@ -21,7 +21,50 @@
       <% end %>
     </ul>
   </div>
-  <div class="col-md-8">
+  <div class="col-md-9">
+    <h2>Heures planifiées</h2>
+    <p>
+      Heures étudiants : <%= @project.student_hours %>
+      (CM <%= @project.student_hours_cm %>
+      TD <%= @project.student_hours_td %>
+      TP <%= @project.student_hours_tp %>)
+      <br/>
+      Heures enseignants : <%= @project.teacher_hours %>
+    </p>
+    <%= link_to 'Planifier une intervention', new_involvement_path(year_id: @project.year.id, project_id: @project.id), class: 'btn btn-primary btn-xs' %>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Personne</th>
+          <th>Module</th>
+          <th>Promotion</th>
+          <th>Heures étudiant total</th>
+          <th>CM</th>
+          <th>TD</th>
+          <th>TP</th>
+          <th>Heures enseignant</th>
+          <th>Note</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @project.involvements.includes(:teaching_module).reorder('teaching_modules.semester_id').each do |involvement| %>
+        <tr>
+          <td><%= link_to involvement.user, involvement.user %></td>
+          <td><%= link_to involvement.teaching_module&.full_name, involvement.teaching_module %></td>
+          <td><%= link_to involvement.promotion.year, involvement.promotion %></td>
+          <td><%= involvement.student_hours %></td>
+          <td><%= involvement.hours_cm %></td>
+          <td><%= involvement.hours_td %></td>
+          <td><%= involvement.hours_tp %></td>
+          <td><%= involvement.teacher_hours %></td>
+          <td><%= simple_format involvement.description %></td>
+          <td><%= link_to 'Edit', edit_involvement_path(involvement, year_id: @project.year.id), class: 'btn btn-primary btn-xs' if can? :edit, involvement%></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+
     <h2>Objectifs visés par ce projet</h2>
     <table class="table table-striped">
       <thead>
@@ -41,47 +84,3 @@
     </table>
   </div>
 </div>
-<h2>Heures planifiées</h2>
-<p>
-  Heures étudiants : <%= @project.student_hours %>
-  (CM <%= @project.student_hours_cm %>
-  TD <%= @project.student_hours_td %>
-  TP <%= @project.student_hours_tp %>)
-  <br/>
-  Heures enseignants : <%= @project.teacher_hours %>
-</p>
-<table class="table">
-  <thead>
-    <tr>
-      <th>Personne</th>
-      <th>Semestre</th>
-      <th>Code module</th>
-      <th>Nom module</th>
-      <th>Heures étudiant total</th>
-      <th>CM</th>
-      <th>TD</th>
-      <th>TP</th>
-      <th>Heures enseignant</th>
-      <th>Note</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @project.involvements.includes(:teaching_module).reorder('teaching_modules.semester_id').each do |involvement| %>
-    <tr>
-      <td><%= link_to involvement.user, involvement.user %></td>
-      <td><%= link_to involvement.teaching_module.semester, involvement.teaching_module.semester %></td>
-      <td><%= link_to involvement.teaching_module, involvement.teaching_module %></td>
-      <td><%= link_to involvement.teaching_module.label, involvement.teaching_module %></td>
-      <td><%= involvement.student_hours %></td>
-      <td><%= involvement.hours_cm %></td>
-      <td><%= involvement.hours_td %></td>
-      <td><%= involvement.hours_tp %></td>
-      <td><%= involvement.teacher_hours %></td>
-      <td><%= simple_format involvement.description %></td>
-      <td><%= link_to involvement.project, involvement.project unless involvement.project.nil? %></td>
-      <td><%= link_to 'Edit', edit_involvement_path(involvement), class: 'btn btn-primary btn-xs' if can? :edit, involvement%></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
