--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -1,142 +1,14 @@
-La promotion <%= link_to @year.first_year_promotion, @year.first_year_promotion %> est en première année.<br>
-La promotion <%= link_to @year.second_year_promotion, @year.second_year_promotion %> est en seconde année.<br>
-Pour actualiser l'EDT, cliquez sur la promotion concernée.
+<p>
+  La promotion <%= link_to @year.first_year_promotion, @year.first_year_promotion %> est en première année, 
+  La promotion <%= link_to @year.second_year_promotion, @year.second_year_promotion %> est en seconde année.
+  Pour actualiser l'EDT depuis Google, cliquez sur la promotion concernée.
+</p>
 
+<div>
+  <%= link_to 'Projets', year_projects_path(year_id: @year.id), class: 'btn btn-default btn-lg' %>
+  <%= link_to 'Interventions', year_involvements_path(year_id: @year.id), class: 'btn btn-default btn-lg' %>
+  <%= link_to 'Modules', year_teaching_modules_path(year_id: @year.id), class: 'btn btn-default btn-lg' %>
+  <%= link_to 'Equipe', year_users_path(year_id: @year.id), class: 'btn btn-default btn-lg' %>
+  <%= link_to 'Semestres (couverture des objectifs)', year_semesters_path(year_id: @year.id), class: 'btn btn-default btn-lg' %>
+</div>
 
-<h2>Projets</h2>
-
-<div id='timeline' style="width: 100%; height: 600px"></div>
-<script type="text/javascript">
-  var data = <%= { events: @year.projects.collect(&:to_event) }.to_json.html_safe %>;
-  var config = { language: 'fr', initial_zoom: 1 };
-  new TL.Timeline('timeline', data, config);
-</script>
-
-<% Semester.all.each do |semester| %>
-  <h3><%= link_to semester, year_semester_path(year_id: @year.id, id: semester) %></h3>
-  <% projects = @year.projects.in_semester(semester) %>
-  <p><%= projects.count %> projets</p>
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th style="min-width: 200px">Nom</th>
-        <th>N° de semaine</th>
-        <th>Description</th>
-        <th>Responsable</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% projects.sort_by(&:week_number).each do |project| %>
-        <tr>
-          <td><%= link_to project, project %></td>
-          <td><%= project.week_number %></td>
-          <td><%= simple_format project.description %></td>
-          <td><%= project.user %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-<% end %>
-
-
-<h2>Maquette</h2>
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th>Promotion</th>
-      <th>Code</th>
-      <th>Module</th>
-      <th>Heures étudiant total</th>
-      <th>CM</th>
-      <th>TD</th>
-      <th>TP</th>
-      <th>Heures enseignant</th>
-      <th>Note</th>
-      <th>Projet</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @year.involvements.includes(:teaching_module).reorder('teaching_modules.semester_id').each do |involvement| %>
-    <tr>
-      <td><%= link_to involvement.promotion, involvement.promotion %></td>
-      <td><%= link_to involvement.teaching_module, involvement.teaching_module unless involvement.teaching_module.nil? %></td>
-      <td><%= link_to involvement.teaching_module.label, involvement.teaching_module unless involvement.teaching_module.nil? %></td>
-      <td><%= involvement.student_hours %></td>
-      <td><%= involvement.hours_cm %></td>
-      <td><%= involvement.hours_td %></td>
-      <td><%= involvement.hours_tp %></td>
-      <td><%= involvement.teacher_hours %></td>
-      <td><%= simple_format involvement.description %></td>
-      <td><%= link_to involvement.project, involvement.project unless involvement.project.nil? %></td>
-      <td><%= link_to 'Modifier', edit_involvement_path(involvement), class: 'btn btn-primary btn-xs' if can? :edit, involvement%></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
-
-
-<h2>EDT</h2>
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th>Module</th>
-      <th>Date</th>
-      <th>Type</th>
-      <th>Heures</th>
-      <th>Heures étudiants</th>
-      <th>Heures enseignant</th>
-      <th>Personnes</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @year.events.each do |event| %>
-      <tr>
-        <td><%= event.teaching_module %></td>
-        <td><%= event.date.strftime "%d/%m/%Y" %></td>
-        <td><%= event.kind.to_s.upcase %></td>
-        <td><%= event.duration %></td>
-        <td><%= event.student_hours %></td>
-        <td><%= event.teacher_hours %></td>
-        <td>
-          <% event.users.each do |user| %>
-            <%= link_to user, user %><br>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-
-<h2>Services</h2>
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th style="min-width: 200px">Nom</th>
-      <th>Service</th>
-      <th>Maquette</th>
-      <th>Delta service / maquette</th>
-      <th>EDT</th>
-      <th>Delta maquette / EDT</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @year.users.each do |user| %>
-      <% next if user.nil? %>
-      <%
-      service = user.hours
-      planned = @year.planned_teacher_hours_for(user)
-      scheduled = @year.scheduled_teacher_hours_for(user)
-      %>
-      <tr>
-        <td><%= link_to user, year_user_path(year_id: @year.id, id: user.id) %></td>
-        <td><%= service.round unless service.nil? %></td>
-        <td><%= planned.round %></td>
-        <%= render 'application/td_delta', value: planned, reference: service %>
-        <td><%= scheduled.round %></td>
-        <%= render 'application/td_delta', value: scheduled, reference: planned %>
-      </tr>
-    <% end unless @year.users.nil? %>
-  </tbody>
-</table>
