--- a/app/views/years/users/show.html.erb
+++ b/app/views/years/users/show.html.erb
@@ -1,4 +1,4 @@
-<h2>Maquette</h2>
+<h2>Service prévisionnel (prévu dans la maquette)</h2>
 
 <table class="table">
   <thead>
@@ -19,16 +19,16 @@
         <td><%= teaching_module.code_apogee %></td>
         <td><%= teaching_module.label %></td>
         <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user) %></td>
-        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :hours_cm) %></td>
-        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :hours_td) %></td>
-        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :hours_tp) %></td>
+        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_cm) %></td>
+        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_td) %></td>
+        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_tp) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 
-<h2>Service</h2>
+<h2>Service validé (planifié dans l'emploi du temps)</h2>
 
 <table class="table">
   <thead>
@@ -49,9 +49,9 @@
         <td><%= teaching_module.code_apogee %></td>
         <td><%= teaching_module.label %></td>
         <td><%= @year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user) %></td>
-        <td><%= @year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :hours_cm) %></td>
-        <td><%= @year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :hours_td) %></td>
-        <td><%= @year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :hours_tp) %></td>
+        <td><%= @year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_cm) %></td>
+        <td><%= @year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_td) %></td>
+        <td><%= @year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_tp) %></td>
       </tr>
     <% end %>
   </tbody>
