--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -12,18 +12,13 @@
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'Tableau de bord', dashboard_path %></li>
+        <li><%= link_to 'Années', years_path %></li>
+        <li><%= link_to 'Promotions', promotions_path %></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Pédagogie <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Divers <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to 'Années', years_path %></li>
-            <li><%= link_to 'Promotions', promotions_path %></li>
             <li><%= link_to 'Equipe', users_path %></li>
             <li><%= link_to 'Discussion', root_path %></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Archives <span class="caret"></span></a>
-          <ul class="dropdown-menu">
             <li><%= link_to 'Champs', fields_path %></li>
             <li><%= link_to 'Services', users_summary_path %></li>
             <li><%= link_to 'Intervenants', budgets_users_path %></li>
