--- a/app/views/years/users/show.html.erb
+++ b/app/views/years/users/show.html.erb
@@ -18,7 +18,7 @@
         <td><%= teaching_module.code %></td>
         <td><%= teaching_module.code_apogee %></td>
         <td><%= teaching_module.label %></td>
-        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user) %></td>
+        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user).round %></td>
         <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_cm) %></td>
         <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_td) %></td>
         <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_tp) %></td>
@@ -48,7 +48,7 @@
         <td><%= teaching_module.code %></td>
         <td><%= teaching_module.code_apogee %></td>
         <td><%= teaching_module.label %></td>
-        <td><%= @year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user) %></td>
+        <td><%= @year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user).round %></td>
         <td><%= @year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_cm) %></td>
         <td><%= @year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_td) %></td>
         <td><%= @year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_tp) %></td>
